--- a/views/login.html
+++ b/views/login.html
@@ -29,7 +29,7 @@
             </form>
             
             <div class="text-center mt-1">
-                <a href="/kiosk" style="color: #667eea; text-decoration: none;">← Back to Kiosk</a>
+                <a href="/kiosk" style="color: #9A061C; text-decoration: none;">← Back to Kiosk</a>
             </div>
         </div>
     </div>
